Update dependency versions