@@ -50,13 +50,13 @@
     <jmh.profilers.version>0.1.3</jmh.profilers.version>
     <jmock.version>2.6.0</jmock.version>
 
-    <k3po.version>3.0.0-alpha-97</k3po.version>
-    <k3po.nukleus.ext.version>0.39</k3po.nukleus.ext.version>
+    <k3po.version>3.0.0-alpha-100</k3po.version>
+    <k3po.nukleus.ext.version>0.41</k3po.nukleus.ext.version>
 
     <nukleus.plugin.version>0.33</nukleus.plugin.version>
 
-    <nukleus.kafka.spec.version>0.110</nukleus.kafka.spec.version>
-    <reaktor.version>0.87</reaktor.version>
+    <nukleus.kafka.spec.version>0.111</nukleus.kafka.spec.version>
+    <reaktor.version>0.90</reaktor.version>
 
     <kafka.clients.version>1.0.0</kafka.clients.version>
   </properties>
@@ -257,7 +257,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.22.1</version>
         <configuration>
-          <argLine>@{argLine}</argLine>
+          <argLine>@{argLine} --add-exports java.base/sun.nio.ch=org.agrona.core --add-opens java.base/sun.nio.ch=org.agrona.core</argLine>
         </configuration>
       </plugin>
       <plugin>
@@ -301,6 +301,13 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
         <version>2.4</version>
+        <configuration>
+          <archive>
+            <manifestEntries>
+              <Automatic-Module-Name>org.reaktivity.nukleus.kafka</Automatic-Module-Name>
+          </manifestEntries>
+        </archive>
+        </configuration>
         <executions>
           <execution>
             <goals>
@@ -336,7 +343,7 @@
               </transformers>
               <artifactSet>
                 <includes>
-                  <include>org.agrona:Agrona</include>
+                  <include>org.agrona:agrona</include>
                   <include>org.reaktivity:nukleus</include>
                   <include>org.reaktivity:reaktor</include>
                   <include>org.openjdk.jmh:jmh-core</include>
